# WS-MetaTrader5

./: CMakeLists.txt  README.md  exports.def
include/: UTF8Converter.h  WebSocketClient.h
src/: UTF8Converter.cpp  WebSocketClient.cpp
